--- a/Code/DahitanGhar/DahitanGhar.Web.csproj
+++ b/Code/DahitanGhar/DahitanGhar.Web.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.11" />
   </ItemGroup>
 
 </Project>
