--- a/Code/DahitanGhar/DahitanGhar.Web.csproj
+++ b/Code/DahitanGhar/DahitanGhar.Web.csproj
@@ -19,6 +19,10 @@
     <ProjectReference Include="..\DahitanGhar.Domain\DahitanGhar.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 	<PropertyGroup>
 		<RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
 	</PropertyGroup>
