--- a/Code/DahitanGhar.Application/DahitanGhar.Application.csproj
+++ b/Code/DahitanGhar.Application/DahitanGhar.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DahitanGhar.Domain\DahitanGhar.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
