--- a/Code/DahitanGhar.Infrastructure/DahitanGhar.Infrastructure.csproj
+++ b/Code/DahitanGhar.Infrastructure/DahitanGhar.Infrastructure.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DahitanGhar.Application\DahitanGhar.Application.csproj" />
+    <ProjectReference Include="..\DahitanGhar.Domain\DahitanGhar.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
