--- a/Code/DahitanGhar/appsettings.json
+++ b/Code/DahitanGhar/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DgConnStr": "Server=DESKTOP-RQUAPI8; Database=DahitanGhar; Integrated Security=True; TrustServerCertificate=True; MultipleActiveResultSets=true;"
+  },
   "AllowedHosts": "*"
 }
