Swaggger fixed and Medaitor Implemented.

--- a/Code/DahitanGhar/appsettings.json
+++ b/Code/DahitanGhar/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DgConnStr": "Server=DESKTOP-RQUAPI8; Database=DahitanGhar; Integrated Security=True; TrustServerCertificate=True; MultipleActiveResultSets=true;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTSettings": {
+    "SecurityKey" :  "Thisissecurity key@12344@@@@@@@@@@@@@@@@@@@@@@" //Replace it with actual security key
+  }
 }
