#new setup completed.

--- a/Code/DahitanGhar/appsettings.json
+++ b/Code/DahitanGhar/appsettings.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
-  "ConnectionStrings": {
-    "DgConnStr": "Server=DESKTOP-RQUAPI8; Database=DahitanGhar; Integrated Security=True; TrustServerCertificate=True; MultipleActiveResultSets=true;"
-  },
-  "AllowedHosts": "*",
-  "JWTSettings": {
-    "SecurityKey" :  "Thisissecurity key@12344@@@@@@@@@@@@@@@@@@@@@@" //Replace it with actual security key
-  }
+  "AllowedHosts": "*"
 }
