--- a/Code/DahitanGhar/Client/package.json
+++ b/Code/DahitanGhar/Client/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.15",
+    "@primeng/themes": "^19.1.4",
+    "bootstrap": "^5.3.8",
     "express": "^4.18.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
